<resources>
    <string name="app_name">DurationalNotificationAura</string>
    <string name="service_name">NotificationListenerService</string>
    <string name="button_trigger">Trigger</string>
    <string name="button_interact">Interact</string>
    <string name="button_reset">Reset</string>
    <string name="button_resetAll">Reset All</string>
    <string name="status_default">Default Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
