<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="250dp">
    <Spinner
            android:id="@+id/packageNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/colorSpinnerBG"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/button_trigger"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/triggerButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/interactButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/statusView"/>
    <Button
            android:text="@string/button_interact"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/interactButton"
            app:layout_constraintEnd_toStartOf="@+id/resetButton" android:layout_marginEnd="4dp"
            app:layout_constraintStart_toEndOf="@+id/triggerButton" android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/statusView"/>
    <Button
            android:text="@string/button_reset"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/resetButton"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/resetAllButton"
            app:layout_constraintStart_toEndOf="@+id/interactButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/statusView"/>
    <Button
            android:text="@string/button_resetAll"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/resetAllButton"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resetButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/statusView"/>
    <TextView
            android:text="@string/status_default"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:id="@+id/statusView"
            android:background="@color/colorSpinnerBG"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/packageNameSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</android.support.constraint.ConstraintLayout>